--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,25 @@
-aioredis==1.3.1
-asgiref==3.2.10
-async-timeout==3.0.1
-attrs==20.1.0
-autobahn==20.7.1
-Automat==20.2.0
-cffi==1.14.2
-channels
-channels-redis
-constantly==15.1.0
-cryptography==3.1
-daphne==2.5.0
-dj-database-url==0.5.0
-Django==3.1.1
-gunicorn==20.0.4
-hiredis==1.1.0
-hyperlink==20.0.1
-idna==2.10
-incremental==17.5.0
-msgpack==1.0.0
-psycopg2==2.8.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-PyHamcrest==2.0.2
-pyOpenSSL==19.1.0
-pytz==2020.1
-service-identity==18.1.0
-six==1.15.0
-sqlparse==0.3.1
-Twisted==20.3.0
-txaio==20.4.1
-zope.interface==5.1.0
+asgiref==3.3.4
+cycler==0.10.0
+Django==3.2.3
+joblib==1.0.1
+kiwisolver==1.3.1
+gunicorn==19.9.0
+matplotlib==3.3.4
+Pillow==8.2.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+scikit-learn==0.24.2
+seaborn==0.11.1
+six==1.16.0
+sklearn==0.0
+sqlparse==0.4.1
+threadpoolctl==2.1.0
+typing-extensions==3.10.0.0
+pandas
+numpy
 django-fontawesome-5
+whitenoise
+daphne
+channels
+django-redis
